--- a/modern.css
+++ b/modern.css
@@ -126,7 +126,7 @@ nav {
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 9999;
     transition: all var(--transition);
 }
 
